day1-main/2024 전국 충남 인프라/app/yaml/gate/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: wsc2024-lattice-svc
  namespace: wsc2024
spec:
  parentRefs:
  - name: wsc2024-lattice-svc-net
    sectionName: http
  rules:
  - backendRefs:
    - name: customer-svc
      kind: Service
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /healthcheck
